--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="jumbotron container-fluid mt-2 text-center p-2" style="background-color:#404040 ;color: white;">
         <h1> <strong>Weather Dashboard</strong></h1>
@@ -17,36 +20,39 @@
             <div class="col-sm-4 bg-light">
                 <h4 class="pt-1"><strong>Search for a City:</strong></h4>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control"id="search-city" aria-label="City Search" aria-describedby="search-button">
+                    <input type="text" class="form-control" id="search-city" aria-label="City Search"
+                        aria-describedby="search-button">
                     <div class="input-group-append">
-                        <button class=" btn bg-primary text-light" id="search-button"><i class="fa fa-search"></i></button>
+                        <button class=" btn bg-primary text-light" id="search-button"><i
+                                class="fa fa-search"></i></button>
                     </div>
                 </div>
                 <button class=" btn btn-primary" type="button" id="clear-history">Clear history</button>
                 <ul class="list-group">
 
                 </ul>
-            </div>   
+            </div>
             <div class="col-sm-8">
                 <div class="row ml-2 border border-dark rounded">
                     <div class="col-sm-12" id="current-weather">
                         <h3 class="city-name mb-1 mt-2 bolder" id="current-city"></h3>
                         <p>Temperature:<span class="current" id="temperature"></span></p>
-                        <p>Humidity:<span class="current" id="humidity"></span></p> 
+                        <p>Humidity:<span class="current" id="humidity"></span></p>
                         <p>Wind Speed:<span class="current" id="wind-speed"></span></p>
-                        <p>UV index:<span class="current bg-danger rounded py-2 px-2 text-white" id="uv-index"></span></p> 
+                        <p>UV index:<span class="current bg-danger rounded py-2 px-2 text-white" id="uv-index"></span>
+                        </p>
                     </div>
                 </div>
-                <div class="col-sm-12" id ="future-weather">
+                <div class="col-sm-12" id="future-weather">
                     <h3>5-Day Forecast:</h3>
                     <div class="row text-light">
-                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
                             <p id="fDate0"></p>
                             <p id="fImg0"></p>
                             <p>Temp:<span id="fTemp0"></span></p>
                             <p>Humidity:<span id="fHumidity0"></span></p>
                         </div>
-                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
                             <p id="fDate1"></p>
                             <p id="fImg1"></p>
                             <p>Temp:<span id="fTemp1"></span></p>
@@ -64,7 +70,7 @@
                             <p>Temp:<span id="fTemp3"></span></p>
                             <p>Humidity:<span id="fHumidity3"></span></p>
                         </div>
-                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
                             <p id="fDate4"></p>
                             <p id="fImg4"></p>
                             <p>Temp:<span id="fTemp4"></span></p>
@@ -72,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
@@ -80,4 +86,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
